--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- //= require jquery3
- //= require popper
- //= require bootstrap-sprockets
  */
+
+ @import "bootstrap";
+ @import "navbar.scss";
+ @import "posts.scss";
+
+
+ body {
+   background-color: #F6F6F6;
+
+   .content-wrapper {
+     padding-top: 24px;
+   }
+ }
