--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  */
 
  @import "bootstrap";
+ @import "font-awesome";
  @import "navbar.scss";
  @import "posts.scss";
 
@@ -21,6 +22,6 @@
    background-color: #F6F6F6;
 
    .content-wrapper {
-     padding-top: 24px;
+     padding-top: 40px;
    }
  }
