--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
       <div class="navbar-nav mr-auto">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
       <ul class="navbar-nav">
@@ -24,7 +24,8 @@
         </li>
         <li class="nav-item">
           <form class="form-inline">
-            <button class="btn btn-outline-success" type="button">Join</button>
+            <%= link_to 'Add', new_post_path, class: 'btn btn-outline-primary' %>
+            <%# <button class="btn btn-outline-success" type="button">Join</button> %>
           </form>
         </li>
       </ul>
