--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <h1>Post a Vendor</h1>
+      <div class="input-group">
+        <%# <%= form.label :image, 'Upload image' %>
+        <%= form.file_field :image, class: 'form-control' %>
+      </div>
       <div class="form-group">
         <%= form.label :name %>
         <%= form.input_field :name, class: 'form-control', placeholder: 'Name' %>
