--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,16 @@
 <div class="row">
+  <div class="col-lg-12">
+    <%= render 'posts/hero' %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h3>Explore</h3>
+  </div>
+</div>
+
+<div class="row">
   <% @posts.each do |post| %>
     <div class="col-xl-4 col-lg-4 col-md-6 col-xs-12">
       <div class="card">
