--- a/app/views/posts/_hero.html.erb
+++ b/app/views/posts/_hero.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron mb-60 text-center jumbotron-bg">
-  <h1 class="display-5 hero-title mb-3">Elore is a place to help showcasing wedding services.</h1>
+  <h1 class="display-5 hero-title mb-3">Elore is a place to help showcase wedding services.</h1>
   <p class="lead hero-lead">Collect and share with everyone.</p>
 </div>
