--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-custom navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-custom navbar-expand-lg navbar-light bg-white sticky-top">
   <div class="container">
     <%= link_to root_path, class: 'navbar-brand' do %>
       <%= image_tag '/logo.png', width: 32, height: 32 %>
@@ -11,23 +11,35 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="navbar-nav mr-auto">
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary btn-primary-custom my-2 my-sm-0" type="submit">Search</button>
+          <div class="input-group">
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-secondary btn-sm" type="button" id="button-addon2"><i data-feather="search"></i></button>
+            </div>
+          </div>
+          <%# <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button> %>
         </form>
       </div>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link mr-2" href="#">Log in</a>
-        </li>
-        <li class="nav-item">
-          <form class="form-inline align-self-center">
-            <%= link_to 'Add', new_post_path, class: 'btn btn-outline-primary btn-primary-custom' %>
-            <%# <button class="btn btn-outline-success" type="button">Join</button> %>
-          </form>
-        </li>
+        <% if user_signed_in? %>
+          <%= link_to 'Log out', destroy_user_session_path, class: 'nav-link mr-2', method: :delete %>
+          <%= link_to new_post_path, class: 'btn btn-primary-custom' do %>
+            <i data-feather="plus"></i>
+          <% end %>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Log in', new_user_session_path, class: 'nav-link mr-2' %>
+          </li>
+          <li class="nav-item">
+            <form class="form-inline align-self-center">
+              <%= link_to 'Join', new_user_registration_path, class: 'btn btn-outline-primary btn-primary-custom' %>
+              <%# <button class="btn btn-outline-success" type="button">Join</button> %>
+            </form>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
