--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,22 +6,21 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h3>Explore</h3>
+    <h3 class="mb-4">Explore</h3>
   </div>
 </div>
 
 <div class="row">
   <% @posts.each do |post| %>
     <div class="col-xl-4 col-lg-4 col-md-6 col-xs-12">
-      <div class="card">
-        <%= image_tag url_for( post.image.variant( resize: '286x180' ) ), class: 'card-img-top' %>
-        <%# <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap"> %>
+      <div class="card mb-4">
+        <%= image_tag url_for( post.image ), class: 'card-img-top' %>
         <div class="card-body">
           <h5 class="card-title">
             <%= link_to post.name, post_path(post) %>
           </h5>
           <p class="card-text">
-            By: <%= 'aaaa' %>
+            By: <%= post.user.email %>
           </p>
         </div>
         <div class="card-footer">
@@ -33,12 +32,11 @@
             </div>
             <div class="col-auto align-self-center">
               <div class="btn-group" role="group">
-                <%= link_to 'Like', root_path, class: 'btn btn-outline-secondary' %>
-                <%# <button type="button" class="btn btn-outline-secondary">
-                  Like
-                </button> %>
-                <button type="button" class="btn btn-outline-secondary">
-                  Save
+                <button type="button" class="btn btn-outline-secondary btn-sm">
+                  <i data-feather="heart"></i> Like
+                </button>
+                <button type="button" class="btn btn-outline-secondary btn-sm">
+                  <i data-feather="bookmark"></i> Save
                 </button>
               </div>
             </div>
