--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h3 class="mb-4">Explore</h3>
+    <h3 class="display-5 mb-4">Latest</h3>
   </div>
 </div>
 
