--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
             <%= link_to post.name, post_path(post) %>
           </h5>
           <p class="card-text">
-            By: <%= post.user.email %>
+            By: <%= post.user.full_name %>
           </p>
         </div>
         <div class="card-footer">
