--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,26 @@
                 autofocus: true ,
                 input_html: { autocomplete: "email" }, class: 'form-control' %>
       </div>
+      
+      <div class="form-group">
+        <div class="form-row">
+          <div class="col">
+            <%= f.label :first_name %>
+            <%= f.input_field :first_name,
+                    required: false,
+                    autofocus: true ,
+                    input_html: { autocomplete: "email" }, class: 'form-control' %>
+          </div>
+
+          <div class="col">
+            <%= f.label :last_name %>
+            <%= f.input_field :last_name,
+                    required: false,
+                    autofocus: true ,
+                    input_html: { autocomplete: "email" }, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
 
       <div class="form-group">
         <%= f.label :password %>
