--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,6 +34,11 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :username %>
+        <%= f.input_field :username, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :password %>
         <%= f.input_field :password,
                 required: true,
