--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -39,6 +39,8 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%# <a class="dropdown-item" href="#">Action</a> %>
+              <%= link_to 'Profile', current_user, class: 'dropdown-item' %>
+              <div class="dropdown-divider"></div>
               <%= link_to 'Log out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
               <%# <a class="dropdown-item" href="#">Another action</a>
               <div class="dropdown-divider"></div>
