Add bio, user profile, refactor code

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
  @import "font-awesome";
  @import "navbar.scss";
  @import "posts.scss";
+ @import "card.scss";
+ @import "users.scss";
 //  @import "footer.scss";
 
 
