--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,17 +29,18 @@
             
           </li>
           <li class="nav-item">
-            <%= link_to new_post_path, class: 'btn btn-primary-custom mr-2' do %>
+            <%= link_to new_post_path, class: 'btn btn-primary-custom add-btn mr-2' do %>
               <i data-feather="plus"></i>
             <% end %>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= current_user.full_name  %>
+              <%= current_user.username  %>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%# <a class="dropdown-item" href="#">Action</a> %>
               <%= link_to 'Profile', current_user, class: 'dropdown-item' %>
+              <%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to 'Log out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
               <%# <a class="dropdown-item" href="#">Another action</a>
