--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.profile-wrapper {
+  width: 100%;
+  height: 20rem;
+
+  background-color: #fff;
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.2);
+
+  padding: 40px;
+}
