--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,62 +1,81 @@
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <%= f.error_notification %>
+<div class="container">
+  <div class="content-wrapper">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <%= f.error_notification %>
 
-      <h1>Register</h1>
+          <h1>Register</h1>
 
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.input_field :email,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "email" }, class: 'form-control' %>
-      </div>
-      
-      <div class="form-group">
-        <div class="form-row">
-          <div class="col">
-            <%= f.label :first_name %>
-            <%= f.input_field :first_name,
-                    required: false,
+          <div class="form-group">
+            <%= f.label :avatar %>
+            <%= f.file_field :avatar %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.input_field :email,
+                    required: true,
                     autofocus: true ,
                     input_html: { autocomplete: "email" }, class: 'form-control' %>
           </div>
+          
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <%= f.label :first_name %>
+                <%= f.input_field :first_name,
+                        required: false,
+                        autofocus: true ,
+                        input_html: { autocomplete: "email" }, class: 'form-control' %>
+              </div>
 
-          <div class="col">
-            <%= f.label :last_name %>
-            <%= f.input_field :last_name,
-                    required: false,
-                    autofocus: true ,
-                    input_html: { autocomplete: "email" }, class: 'form-control' %>
+              <div class="col">
+                <%= f.label :last_name %>
+                <%= f.input_field :last_name,
+                        required: false,
+                        autofocus: true ,
+                        input_html: { autocomplete: "email" }, class: 'form-control' %>
+              </div>
+            </div>
           </div>
+
+          <div class="form-group">
+            <f.label :bio>
+            <f.input_field :bio, class: 'form-control'>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :username %>
+            <%= f.input_field :username, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :bio %>
+            <%= f.input_field :bio, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password %>
+            <%= f.input_field :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" }, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.input_field :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" }, class: 'form-control' %>
+          </div>
+
+          <div class="form-actions mb-3">
+            <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
+          </div>
+
+          Have an account? <%= render "devise/shared/links" %>
         </div>
       </div>
-
-      <div class="form-group">
-        <%= f.label :username %>
-        <%= f.input_field :username, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.input_field :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" }, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.input_field :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" }, class: 'form-control' %>
-      </div>
-
-      <div class="form-actions mb-3">
-        <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
-      </div>
-
-      Have an account? <%= render "devise/shared/links" %>
-    </div>
+    <% end %>
   </div>
-<% end %>
+</div>
