--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,48 +1,54 @@
-<div class="row">
-  <div class="col-lg-12">
-    <%= render 'posts/hero' %>
-  </div>
-</div>
+<div class="container">
+  <div class="content-wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <%= render 'posts/hero' %>
+      </div>
+    </div>
 
-<div class="row">
-  <div class="col-lg-12">
-    <h3 class="display-5 mb-4">Latest</h3>
-  </div>
-</div>
+    <div class="row">
+      <div class="col-lg-12">
+        <h3 class="display-5 mb-4">Latest</h3>
+      </div>
+    </div>
 
-<div class="row">
-  <% @posts.each do |post| %>
-    <div class="col-xl-4 col-lg-4 col-md-6 col-xs-12">
-      <div class="card mb-4">
-        <%= image_tag url_for( post.image ), class: 'card-img-top' %>
-        <div class="card-body">
-          <h5 class="card-title">
-            <%= link_to post.name, post_path(post) %>
-          </h5>
-          <p class="card-text">
-            By: <%= post.user.full_name %>
-          </p>
-        </div>
-        <div class="card-footer">
-          <div class="row">
-            <div class="col-auto mr-auto align-self-center">
-              <% post.tag_list.each do |tag| %>
-                In <%= tag %>
-              <% end %>
+    <div class="row">
+      <% @posts.each do |post| %>
+        <div class="col-xl-4 col-lg-4 col-md-6 col-xs-12">
+          <div class="card mb-4">
+            <%= image_tag url_for( post.image ), class: 'card-img-top' %>
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= link_to post.name, post_path(post) %>
+              </h5>
+              <p class="card-text">
+                <% if current_user %>
+                  By: <%= link_to post.user.username, current_user %>
+                <% else %>
+                  By: <%= link_to post.user.username, user_path(post) %>
+                <% end %>
+              </p>
             </div>
-            <div class="col-auto align-self-center">
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-outline-secondary btn-sm">
-                  <i data-feather="heart"></i> Like
-                </button>
-                <button type="button" class="btn btn-outline-secondary btn-sm">
-                  <i data-feather="bookmark"></i> Save
-                </button>
+            <div class="card-footer">
+              <div class="row">
+                <div class="col-auto mr-auto align-self-center">
+                  <span class="text-muted">In <%= post.tag_list %></span>
+                </div>
+                <div class="col-auto align-self-center">
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-outline-secondary btn-sm">
+                      <i data-feather="heart"></i> Like
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm">
+                      <i data-feather="bookmark"></i> Save
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
