--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="form-group">
-        <%= form.label :tags, 'Category' %>
+        <%= form.label :tag_list, 'Category' %>
         <%= form.input_field :tag_list, class: 'form-control', placeholder: 'Add a tag' %>
       </div>
       <div class="form-actions">
