--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,11 @@
-<%= @user.email %>
-
-<% @user.posts.each do |post| %>
-  <%= image_tag url_for( post.image ) %>
-<% end %>
+<div class="container-fluid px-0">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="profile-wrapper d-flex justify-content-top flex-column align-items-center">
+        <%= image_tag url_for( @user.avatar.variant( resize: '64x64' ) ), class: 'rounded-circle img-fluid', :style => "width: 64px; height: 64px;" %>
+        <div class="mt-4 display-5"><%= @user.full_name %></div>
+        <p class="text-muted"><%= @user.bio %> </p>
+      </div>
+    </div>
+  </div>
+</div>
