--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,7 +40,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%# <a class="dropdown-item" href="#">Action</a> %>
               <%= link_to 'Profile', current_user, class: 'dropdown-item' %>
-              <%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %>
+              <%# <%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to 'Log out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
               <%# <a class="dropdown-item" href="#">Another action</a>
