--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,31 +1,35 @@
-<%= simple_form_for @post do |form| %>
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h1>Post a Vendor</h1>
-      <div class="input-group">
-        <%# <%= form.label :image, 'Upload image' %>
-        <%= form.file_field :image, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= form.label :name %>
-        <%= form.input_field :name, class: 'form-control', placeholder: 'Name' %>
-      </div>
-      <div class="form-group">
-        <%= form.label :body, 'Description' %>
-        <%= form.input_field :body, class: 'form-control', placeholder: 'Write a description of the post' %>
-      </div>
-      <div class="form-group">
-        <%= form.label :url, 'Website URL' %>
-        <%= form.input_field :url, class: 'form-control', placeholder: 'e.g. https://google.com.sg' %>
-      </div>
+<div class="container">
+  <div class="content-wrapper">
+    <%= simple_form_for @post do |form| %>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h1>Post a Vendor</h1>
+          <div class="form-group">
+            <%= form.label :image, 'Upload image' %>
+            <%= form.file_field :image, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :name %>
+            <%= form.input_field :name, class: 'form-control', placeholder: 'Name' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :body, 'Description' %>
+            <%= form.input_field :body, class: 'form-control', placeholder: 'Write a description of the post' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :url, 'Website URL' %>
+            <%= form.input_field :url, class: 'form-control', placeholder: 'e.g. https://google.com.sg' %>
+          </div>
 
-      <div class="form-group">
-        <%= form.label :tag_list, 'Category' %>
-        <%= form.input_field :tag_list, class: 'form-control', placeholder: 'Add a tag' %>
+          <div class="form-group">
+            <%= form.label :tag_list, 'Category' %>
+            <%= form.input_field :tag_list, class: 'form-control', placeholder: 'Add a tag' %>
+          </div>
+          <div class="form-actions">
+            <%= form.submit 'Post Vendor', class: 'btn btn-primary my-2' %>
+          </div>
+        </div>
       </div>
-      <div class="form-actions">
-        <%= form.submit 'Post Vendor', class: 'btn btn-primary my-2' %>
-      </div>
-    </div>
+    <% end %>
   </div>
-<% end %>
+</div>
