--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,52 +1,74 @@
-<footer id="myFooter">
+<!-- footer -->
+<div class="footer mt-5 text-center">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Get started</h5>
-                <ul class="py-3">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Downloads</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>About us</h5>
-                <ul class="py-3">
-                    <li><a href="#">Company Information</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Reviews</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Support</h5>
-                <ul class="py-3">
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help desk</a></li>
-                    <li><a href="#">Forums</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3 info">
-                <h5>Information</h5>
-                <%= image_tag url_for( '/logo.png' ), class: 'img-fluid py-3' %>                
-                <p> Curating the best wedding services. Handpicked by the community. </p>
+        <div class="row ">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
+                <div class="ft-logo"><img src="https://easetemplate.com/free-website-templates/cointrade/images/logo.png" alt=""></div>
             </div>
         </div>
-    </div>
-    <div class="second-bar">
-        <div class="container">
-          <div class="row row-second-bar">
-            <div class="col-auto mr-auto align-self-center">
-              <p class="my-0">&copy; Elore 2018. All Rights Reserved.</p>
+        <hr class="footer-line">
+        <div class="row ">
+            <!-- footer-about -->
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 ">
+                <div class="footer-widget ">
+                    <div class="footer-title">Company</div>
+                    <ul class="list-unstyled">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">Legal & Privacy</a></li>
+                    </ul>
+                </div>
             </div>
-
-            <div class="col-auto">
-              <div class="social-icons">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-              </div>
+            <!-- /.footer-about -->
+            <!-- footer-links -->
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 ">
+                <div class="footer-widget ">
+                    <div class="footer-title">Quick Links</div>
+                    <ul class="list-unstyled">
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
             </div>
-          </div>
+            <!-- /.footer-links -->
+            <!-- footer-links -->
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 ">
+                <div class="footer-widget ">
+                    <div class="footer-title">Social</div>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Google +</a></li>
+                        <li><a href="#">Linked In</a></li>
+                        <li><a href="#">Facebook</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /.footer-links -->
+            <!-- footer-links -->
+            <%# <div class="col-xl-3 col-lg-3 col-md-12 col-sm-6 col-6 ">
+                <div class="footer-widget ">
+                    <h3 class="footer-title">Subscribe Newsletter</h3>
+                    <form>
+                        <div class="newsletter-form">
+                            <input class="form-control" placeholder="Enter Your Email address" type="text">
+                            <button class="btn btn-default btn-sm" type="submit">Go</button>
+                        </div>
+                    </form>
+                </div>
+            </div> %>
+            <!-- /.footer-links -->
+            <!-- tiny-footer -->
+        </div>
+        <div class="row ">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center ">
+                <div class="tiny-footer">
+                    <p>© 2018 Elore. All Rights Reserved.</p>
+                </div>
+            </div>
+            <!-- /. tiny-footer -->
         </div>
     </div>
-</footer>
+</div>
+<!-- /.footer -->
