--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import "posts.scss";
  @import "card.scss";
  @import "users.scss";
-//  @import "footer.scss";
+ @import "footer.scss";
 
 
  body {
