--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,109 +1,31 @@
-#myFooter {
-  background-color: white;
-  color: #939393;
-  margin-top: 40px;
-  padding: 24px 0 0 0;
+// p { margin: 0 0 20px; line-height: 1.7; }
+// p:last-child { margin: 0px; }
+a { text-decoration: none; color: #6d767a; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
+a:focus, a:hover { text-decoration: none; color: #235f83; }
+hr { border-top: 1px solid #e4e7e9; margin-bottom: 50px; margin-top: 50px; }
 
-  .row-second-bar {
-    margin-bottom: 0;
-  }
+// .btn { font-family: 'Source Sans Pro', sans-serif; font-size: 16px; text-transform: capitalize; font-weight: 700; padding: 12px 24px; letter-spacing: 0px; border-radius: 3px; line-height: 2; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; transition: all 0.5s; word-wrap: break-word; white-space: normal !important; }
 
-  .info {
-    text-align: justify;
-    color: #afb0b1;
-  }
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-    line-height: 1.7;
-  }
-  h5 {
-    font-size: 18px;
-    color: #3a3a3a;
-    font-weight: bold;
-    margin-top: 30px;
-  }
-  .logo {
-    margin-top: 10px;
-  }
-  .second-bar .logo a {
-    color: white;
-    font-size: 28px;
-    float: left;
-    font-weight: bold;
-    line-height: 68px;
-    margin: 0;
-    padding: 0;
-  }
-  a {
-    color: #939393;
-    text-decoration: none;
-    &:hover, &:focus {
-      text-decoration: none;
-      color: #000;
-    }
-  }
-  .second-bar {
-    text-align: center;
-    background-color: #33373e;
-    text-align: center;
-    height: 68px;
-    a {
-      font-size: 22px;
-      color: #9fa3a9;
-      padding: 10px;
-      transition: 0.2s;
-      line-height: 68px;
-      &:hover {
-        text-decoration: none;
-      }
-    }
-  }
-  .social-icons {
-    float: right;
-  }
-  .facebook:hover {
-    color: #0077e2;
-  }
-  .google:hover {
-    color: #ef1a1a;
-  }
-  .twitter:hover {
-    color: #00aced;
-  }
-}
+// .btn-default { background-color: #ff9f2a; color: #fff; border: 1px solid #ff9f2a; }
+// .btn-default:hover { background-color: #ec8a13; color: #fff; border: 1px solid #ec8a13; }
+// .btn-default.focus, .btn-default:focus { background-color: #ec8a13; color: #fff; border: 1px solid #ec8a13; box-shadow: 0 0 0 0.1rem rgb(236, 138, 19); }
 
-@media screen and (max-width: 767px) {
-  #myFooter {
-    text-align: center;
-    .info {
-      text-align: center;
-    }
-  }
-}
 
-/* CSS used for positioning the footers at the bottom of the page. */
-/* You can remove this. */
+// .form-control { border-radius: 0px; font-size: 14px; font-weight: 700; width: 100%; height: 64px; padding: 16px 20px; line-height: 1.42857143; border: 1px solid #d6dadc; background-color: #fff; text-transform: capitalize; letter-spacing: 0px; margin-bottom: 30px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0); box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0); -webkit-appearance: none; color: #011c28; }
+// .form-control:focus { color: #011c28; outline: 0; box-shadow: 0 0 0 0.0rem rgb(255, 255, 255); border-color: #c9cdd0; background-color: #f0f4f6; }
 
-html {
-  height: 100%;
-}
 
-body {
-  display: flex;
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  height: 100%;
-}
+.footer { background-color: #08202e; padding-top: 80px; color: #636e74; font-weight: 400; font-size: 17px; }
+.footer-line { border-color: #152e3d; }
+.footer-widget { padding-bottom: 50px; }
+.footer-title { font-size: 24px; font-weight: 600; margin-bottom: 44px; color: #fff; }
+.footer-widget ul li a { text-transform: capitalize; font-size: 17px; color: #636e74; display: block; font-weight: 600; }
+.footer-widget ul li a:hover { color: #fff; }
+.newsletter-form { padding-top: 15px; }
+.newsletter-form .form-control { background-color: #1e2e38; border-color: #1e2e38; }
+.newsletter-form .form-control:focus { color: #fff; }
+.newsletter-form input::-webkit-input-placeholder { color: #fff !important; }
+.newsletter-form input:focus::-webkit-input-placeholder { color: #fff !important; }
 
-.content {
-  flex: 1 0 auto;
-  -webkit-flex: 1 0 auto;
-  min-height: 200px;
-}
 
-#myFooter {
-  flex: 0 0 auto;
-  -webkit-flex: 0 0 auto;
-}
+.tiny-footer { font-size: 14px; padding: 14px 0px; font-weight: 600; background-color: transparent; border-top: 1px solid #152e3d; color: #888d90; line-height: 1; }
