--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,34 +7,74 @@
         <div class="col-md-6 offset-md-3">
           <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-            <div class="form-inputs">
-              <%= f.input :email, class: 'form-control' %>
+          <div class="form-group">
+            <%= f.input :email, class: 'form-control' %>
 
-              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-              <% end %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
+          </div>
 
-              <%= f.input :password,
-                          hint: "leave it blank if you don't want to change it",
-                          required: false %>
-              <%= f.input :password_confirmation,
-                          required: false %>
-              <%= f.input :current_password,
-                          hint: "we need your current password to confirm your changes",
-                          required: true %>
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <%= f.label :first_name %>
+                <%= f.input_field :first_name,
+                        required: false,
+                        autofocus: true ,
+                        input_html: { autocomplete: "email" }, class: 'form-control' %>
+              </div>
+
+              <div class="col">
+                <%= f.label :last_name %>
+                <%= f.input_field :last_name,
+                        required: false,
+                        autofocus: true ,
+                        input_html: { autocomplete: "email" }, class: 'form-control' %>
+              </div>
             </div>
+          </div>
 
-            <div class="form-actions mb-3">
-              <%= f.button :submit, "Update", class: 'btn btn-primary' %>
-            </div>
-          <% end %>
+          <div class="form-group">
+            <f.label :bio>
+            <f.input_field :bio, class: 'form-control'>
+          </div>
 
-          <h3>Cancel my account</h3>
+          <div class="form-group">
+            <%= f.label :username %>
+            <%= f.input_field :username, class: 'form-control' %>
+          </div>
 
-          <p> <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+          <div class="form-group">
+            <%= f.input :password,
+                        hint: "leave it blank if you don't want to change it",
+                        required: false, class: 'form-control' %>
+          </div>
 
-          <%= link_to "Back", :back %>
-        </div>
+          <div class="form-group">
+            <%= f.input :password_confirmation,
+                        required: false,
+                        class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.input :current_password,
+                        hint: "we need your current password to confirm your changes",
+                        required: true, class: 'form-control' %>
+          </div>
+
+          <div class="form-actions mb-3">
+            <%= f.button :submit, "Update", class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+
+        <hr />
+
+        <h3>Cancel my account</h3>
+
+        <p> <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+        <%# <%= link_to "Back", :back %>
       </div>
   </div>
 </div>
