--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <%= render 'layouts/navbar' %>
     <%= yield %>
-    <%# <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
     <script>
       feather.replace()
     </script>
