--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -65,5 +65,11 @@
         <%# <%= @post.tag_list %>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-12 mt-5">
+        <%= commontator_thread(@post) %>
+      </div>
+    </div>
   </div>
 </div>
