--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,6 +8,11 @@
           <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
           <div class="form-group">
+            <%= f.label :avatar %>
+            <%= f.file_field :avatar, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
             <%= f.input :email, class: 'form-control' %>
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
